--- a/style.css
+++ b/style.css
@@ -35,3 +35,10 @@ body{
 	font-size: 14px;
 	outline: 0;
 }
+.error{
+	font-size: 11px;
+	background-color: #ff0000;
+	color: #fff;
+	padding: 4px;
+	border-radius: 3px;
+}
